// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-document-blueprint should create a document blueprint 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`create-document-blueprint should create a document blueprint 2`] = `
{
  "documentType": {
    "collection": null,
    "icon": "icon-home color-blue",
    "id": "00000000-0000-0000-0000-000000000000",
  },
  "flags": [],
  "hasChildren": false,
  "id": "00000000-0000-0000-0000-000000000000",
  "isFolder": false,
  "name": "_Test Blueprint Created",
  "parent": null,
}
`;

exports[`create-document-blueprint should create a document blueprint with parent folder 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`create-document-blueprint should create a document blueprint with parent folder 2`] = `
{
  "documentType": {
    "collection": null,
    "icon": "icon-home color-blue",
    "id": "00000000-0000-0000-0000-000000000000",
  },
  "flags": [],
  "hasChildren": false,
  "id": "00000000-0000-0000-0000-000000000000",
  "isFolder": false,
  "name": "_Test Blueprint With Parent",
  "parent": {
    "id": "00000000-0000-0000-0000-000000000000",
  },
}
`;

exports[`create-document-blueprint should handle existing document blueprint 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "The supplied name is already in use for the same content type.",
    "operationStatus": "DuplicateName",
    "status": 400,
    "title": "Duplicate name",
    "type": "Error",
  },
}
`;
